# rust-mcp-core

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/auth/: middleware.rs  mod.rs
src/bootstrap/: mod.rs  tracing_init.rs
src/config/: base.rs  mod.rs  safe_path.rs  token.rs
src/transport/: mod.rs  sse.rs
