[package]
name = "mcp-core"
description = "Common MCP and Webserver infrastructure"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Grönke"]
license = "BSD-3-Clause"
repository = "https://github.com/gronke/rust-mcp-core"
publish = false

[features]
default = ["auth", "config", "bootstrap"]
auth = ["dep:axum", "dep:tower", "dep:base64"]
config = []
transport = ["dep:axum", "dep:rmcp", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:futures", "dep:rand", "dep:serde", "dep:serde_json", "dep:tracing"]
bootstrap = ["dep:tracing", "dep:tracing-subscriber"]
full = ["auth", "config", "transport", "bootstrap"]

[dependencies]
# Auth feature
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

# Transport feature
rmcp = { version = "0.1", features = ["server", "transport-sse-server"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Bootstrap feature
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7" }
tower = { version = "0.4", features = ["util"] }

[lib]
name = "mcp_core"
path = "src/lib.rs"
